[MOSIP-13901] added workflowSearchapi ports in reprocessor deployment

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
@@ -59,7 +59,10 @@ spec:
           containerPort: {{ .Values.services.reprocess.ports.workflowActionEventBusPort }}
         - name: workflowapi-sp
           containerPort: {{ .Values.services.reprocess.ports.workflowActionServerPort }}
-
+        - name: workflowsearchapi-ebp
+          containerPort: {{ .Values.services.reprocess.ports.workflowSearchEventBusPort }}
+        - name: workflowsearchapi-sp
+          containerPort: {{ .Values.services.reprocess.ports.workflowSearchServerPort }}
 
 #        readinessProbe:
 #          httpGet:
