[MOSIP-13901] updated workflowSearchapi ports in reprocessor deployment

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
@@ -59,9 +59,9 @@ spec:
           containerPort: {{ .Values.services.reprocess.ports.workflowActionEventBusPort }}
         - name: workflowapi-sp
           containerPort: {{ .Values.services.reprocess.ports.workflowActionServerPort }}
-        - name: workflowsearchapi-ebp
+        - name: wkflowseach-ebp
           containerPort: {{ .Values.services.reprocess.ports.workflowSearchEventBusPort }}
-        - name: workflowsearchapi-sp
+        - name: wkflowseach-sp
           containerPort: {{ .Values.services.reprocess.ports.workflowSearchServerPort }}
 
 #        readinessProbe:
