[MOSIP-12999] Replica property added.

--- a/deployment/v3/external/iam/values.yaml
+++ b/deployment/v3/external/iam/values.yaml
@@ -11,3 +11,9 @@ ingress:
 
 proxyAddressForwarding: true
 
+replicaCount: 1 
+
+# Enable if replicaCount > 1
+serviceDiscovery:
+  enabled: false
+
