[MOSIP-12999] Scripts updated.

--- a/deployment/v3/external/iam/host_configmap.yaml
+++ b/deployment/v3/external/iam/host_configmap.yaml
@@ -4,5 +4,5 @@ metadata:
   name: keycloak-host
   namespace: keycloak
 data:
-  keycloak-host-url: https://iam.mosip.net/auth/
+  keycloak-host-url: https://iam.mosip.net
 
