[MOSIP-13928] added changes for WIP mock biosdk server

--- a/deployment/sandbox-v2/helm/charts/mock-biosdk/templates/mock-biosdk-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/mock-biosdk/templates/mock-biosdk-dep.yaml
@@ -26,7 +26,23 @@ spec:
         image: {{ .Values.services.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
-        - name: mosip.sdk.biosdk.lib
+        - name: biosdk_zip_url
+          value: {{ .Values.biosdklibzip }}
+        - name: biosdk_bioapi_impl
           value: {{ .Values.biosdklib }}
+
         ports:
         - containerPort: {{ .Values.services.containerPort }} 
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.reprocess.healthUrl }}
+            port: {{ .Values.services.reprocess.ports.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDelay }}
+          periodSeconds: {{ .Values.probe.period }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.reprocess.healthUrl }}
+            port: {{ .Values.services.reprocess.ports.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDelay }}
+          periodSeconds: {{ .Values.probe.period }}
+
