[MOSIP-14296] added logback.xml for reg-client-downloader

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -235,6 +235,7 @@ reg_client:
   xml_file: '{{install_root}}/roles/reg-client-prep/templates/maven-metadata.xml'
   crypto_key: 'bBQX230Wskq6XpoZ1c+Ep1D+znxfT89NxLQ7P4KFkc4='
   bootpwd: 'bW9zaXAxMjM0NQ=='
+  logback_xml: '{{install_root}}/roles/reg-client-prep/files/logback.xml'
 
 repos:
   commons:
