--- a/deployment/v3/cluster/global_configmap.yaml
+++ b/deployment/v3/cluster/global_configmap.yaml
@@ -6,5 +6,6 @@ metadata:
   namespace: default
 data:
   mosip-api-host-url: https://api.sandbox.xyz.net
+  mosip-api-internal-url: https://api-internal.sandbox.xyz.net
   is_glowroot_env: absent
 
