--- a/deployment/v3/utils/httpbin/vs.yaml
+++ b/deployment/v3/utils/httpbin/vs.yaml
@@ -4,9 +4,9 @@ metadata:
   name: httpbin
 spec:
   hosts:
-  - "api.sandbox.mosip.net"
+  - "*"
   gateways:
-  - httpbin-gateway
+  - istio-system/public
   http:
   - match:
       - uri:
