[MOSIP-13711] updated latest packetmanager change for 1.1.4.3

--- a/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
@@ -27,6 +27,8 @@ spec:
         exportLogs: {{ .Values.exportLogs }}
     spec:
       {{- include "dockerHubSecret" .  | indent 6}}
+      serviceAccountName: {{.Values.serviceAccount}}
+      automountServiceAccountToken: true
       containers:
       - name: {{ .Values.services.packet.serviceName }} 
         image: {{ .Values.services.packet.dockerImage }}
