--- a/deployment/sandbox-v2/helm/charts/regproc/templates/quality-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/quality-dep.yaml
@@ -20,6 +20,10 @@ spec:
       maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.quality.annotation }}
+        prometheus.io/port: {{ .Values.services.quality.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.quality.serviceName }} 
         component: service-hazelcast-server
