--- a/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
@@ -19,6 +19,10 @@ spec:
       maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.trans.annotation }}
+        prometheus.io/port: {{ .Values.services.trans.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.trans.serviceName }} 
         exportLogs: {{ .Values.exportLogs }}
