--- a/deployment/v3/cluster/aws/istio/values_internal.yaml
+++ b/deployment/v3/cluster/aws/istio/values_internal.yaml
@@ -9,3 +9,32 @@ gateways:
     labels:
       app: istio-ingressgateway-internal
       istio: ingressgateway-internal
+    ports:
+    - name: status-port
+      port: 15021
+      protocol: TCP
+      targetPort: 15021
+    - name: http2
+      port: 80
+      protocol: TCP
+      targetPort: 8080
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 8443
+    - name: tcp-istiod
+      port: 15012
+      protocol: TCP
+      targetPort: 15012
+    - name: tls
+      port: 15443
+      protocol: TCP
+      targetPort: 15443
+    - name: activemq
+      port: 61616
+      protocol: TCP
+      targetPort: 61616
+    - name: postgres
+      port: 5432
+      protocol: TCP
+      targetPort: 5432
