--- a/deployment/v3/external/activemq/aws/values.yaml
+++ b/deployment/v3/external/activemq/aws/values.yaml
@@ -1,11 +1,2 @@
-service:
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
-
-## Ingress is defined only for webconsole access.
-ingress:
-  enabled: true
-  hostName: "activemq.sandbox.mosip.net"
+loadbalancer:
+  enabled: false
