Changed port for UI applications.

--- a/deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-dep.yaml
@@ -28,8 +28,8 @@ spec:
         image: {{ .Values.docker.image }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         ports:
-        - containerPort: {{ .Values.docker.containerPort }}
+        - containerPort: {{ .Values.services.artifactory.containerPort }}
         readinessProbe:
           tcpSocket:
-            port: {{  .Values.docker.containerPort }}
+            port: {{  .Values.services.artifactory.containerPort }}
 
