--- a/deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-svc.yaml
@@ -9,5 +9,5 @@ spec:
   selector:
     app: {{ .Values.docker.service }}
   ports:
-    - port: 80 
-      targetPort: {{ .Values.docker.containerPort }}
+    - port: {{ .Values.services.artifactory.servicePort }}
+      targetPort: {{ .Values.services.artifactory.containerPort }}
