--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-svc.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: default
 spec:
   ports:
-    - port: {{ .Values.services.ui.servicePort }} 
+    - port: {{ .Values.services.ui.servicePort }}
+      targetPort: {{ .Values.services.ui.containerPort }}
   selector:
     app: {{ .Values.services.ui.serviceName }}
