--- a/deployment/v3/external/postgres/cluster/istio/virtualservice.yaml
+++ b/deployment/v3/external/postgres/cluster/istio/virtualservice.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: postgres-postgresql
+  namespace: postgres
 spec:
   hosts:
     - "*"
