[MOSIP-14222] changes for running biosdk service inside k8 cluster

--- a/deployment/sandbox-v2/helm/charts/mock-biosdk/templates/dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/mock-biosdk/templates/dep.yaml
@@ -33,16 +33,16 @@ spec:
 
         ports:
         - containerPort: {{ .Values.services.containerPort }} 
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.reprocess.healthUrl }}
-            port: {{ .Values.services.reprocess.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
-          periodSeconds: {{ .Values.probe.period }}
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.reprocess.healthUrl }}
-            port: {{ .Values.services.reprocess.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
-          periodSeconds: {{ .Values.probe.period }}
+#        readinessProbe:
+#          httpGet:
+#            path: {{ .Values.services.reprocess.healthUrl }}
+#            port: {{ .Values.services.reprocess.ports.containerPort }}
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }}
+#          periodSeconds: {{ .Values.probe.period }}
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.reprocess.healthUrl }}
+#            port: {{ .Values.services.reprocess.ports.containerPort }}
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }}
+#          periodSeconds: {{ .Values.probe.period }}
 
