--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -146,8 +146,8 @@ versions:
         'mock-abis': 'mosipqa/mock-abis:1.1.5.1'
       mv:
         'mock-mv': 'mosipqa/mock-mv:1.1.5.1'
-#      biosdk: 
-#        'mock-biosdk-service': 'mosipdev/biosdk-server:develop'
+      biosdk: 
+        'mock-biosdk-service': 'mosipdev/biosdk-server:develop'
 
     artifactory:
       service:
