[MOSIP-14222] changes for running biosdk service inside k8 cluster
Conflicts:
	deployment/sandbox-v2/helm/charts/mock-biosdk/templates/dep.yaml
	deployment/sandbox-v2/versions.yml

--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -158,8 +158,8 @@ versions:
         'mock-abis': 'mosipid/mock-abis:1.1.5'
       mv:
         'mock-mv': 'mosipid/mock-mv:1.1.5'
-#      biosdk: 
-#        'mock-biosdk-service': 'mosipid/sdk-services:latest'
+      biosdk: 
+        'mock-biosdk-service': 'mosipqa/biosdk-server:develop'
 
     artifactory:
       service:
