[SSD-70] Completed addition of WIP mock-biosdk service

--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -163,4 +163,5 @@ versions:
 
     artifactory:
       service:
-        'artifactory-service': 'mosipid/artifactory-server:1.1.5'
+        'artifactory-service': 'mosipdev/artifactory-server:1.1.5_biosdk'
+
