--- a/deployment/sandbox-v2/helm/charts/mock-biosdk/templates/dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/mock-biosdk/templates/dep.yaml
@@ -26,23 +26,9 @@ spec:
         image: {{ .Values.services.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
-        - name: mosip.sdk.biosdk.lib
+        - name: biosdk_zip_file_path
+          value: {{ .Values.biosdklibzip }}
+        - name: biosdk_bioapi_impl
           value: {{ .Values.biosdklib }}
         ports:
         - containerPort: {{ .Values.services.containerPort }} 
-<<<<<<< HEAD:deployment/sandbox-v2/helm/charts/mock-biosdk/templates/mock-biosdk-dep.yaml
-=======
-#        readinessProbe:
-#          httpGet:
-#            path: {{ .Values.services.reprocess.healthUrl }}
-#            port: {{ .Values.services.reprocess.ports.containerPort }}
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }}
-#          periodSeconds: {{ .Values.probe.period }}
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.reprocess.healthUrl }}
-#            port: {{ .Values.services.reprocess.ports.containerPort }}
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }}
-#          periodSeconds: {{ .Values.probe.period }}
-
->>>>>>> c833ce6... [MOSIP-14222] changes for running biosdk service inside k8 cluster:deployment/sandbox-v2/helm/charts/mock-biosdk/templates/dep.yaml
