--- a/deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/audit-dep.yaml
@@ -21,6 +21,10 @@ spec:
       maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.audit.annotation }}
+        prometheus.io/port: {{ .Values.services.audit.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.audit.serviceName }} 
         component: {{ .Values.component }} 
