added the annotation for prometheus scraping in packetmanager

--- a/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
@@ -21,6 +21,10 @@ spec:
       maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
+      annotations:
+        prometheus.io/path: {{ .Values.services.packet.annotation }}
+        prometheus.io/port: {{ .Values.services.packet.ports.containerPort | quote }}
+        prometheus.io/scrape: "'true'"
       labels:
         app: {{ .Values.services.packet.serviceName }} 
         component: {{ .Values.component }} 
