templatised the websub ingress yaml
Conflicts:
	deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml

--- a/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
@@ -10,11 +10,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /websub
-        pathType: ImplementationSpecific
+      - path: {{ .Values.services.ingress }}
         backend:
-          service:
-            name: {{ .Values.services.serviceName }}
-            port: 
-              number: 80 
-
+          serviceName: {{ .Values.services.serviceName }}
+          servicePort: {{ .Values.services.servicePort }}
