templatised the websub ingress yaml

--- a/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
@@ -10,8 +10,8 @@ spec:
   rules:
   - http:
       paths:
-      - path: /websub
+      - path: {{ .Values.services.ingress }}
         backend:
           serviceName: {{ .Values.services.serviceName }}
-          servicePort: 80 
+          servicePort: {{ .Values.services.servicePort }}
 
